# ImageProcFinal

./: README.md  convert_images.py  felze_correlogram_hog.py  hog_svm.py  hough_experiment.py  main.py  pipeline.ipynb  pyproject.toml
dataset/: data.yaml
dataset/labels/: train.cache  val.cache
dataset/test_images/: ex4.avif
detections/: metrics.txt
felze_detections/: metrics.txt
hough_detections/: metrics.txt
images/: image_14.avif  image_18.avif  image_28.avif  image_6.avif
labels/: notes.json
labels/labels/: 01ccf1a9-image_19.txt  22bdb692-image_3.txt  28af3d4e-image_25.txt  416354af-image_16.txt  462a6bb0-image_27.txt  477bc4d6-image_18.txt  653a6147-image_26.txt  6826a264-image_20.txt  760babca-image_28.txt  8793d8bc-image_15.txt  b66d9b40-image_2.txt  b7c7785f-image_14.txt  e081d559-image_30.txt  f3438f8f-image_9.txt  fd7a63de-image_7.txt
results/hough_ellipse_localizer_hog_features-correlogram_features-haralick_features_logreg_classifier-knn_classifier-xgboost_classifier_detections/: metrics.json  metrics.txt
results/segmentation_localizer_hog_features-correlogram_features-haralick_features_logreg_classifier-knn_classifier-xgboost_classifier_detections/: metrics.json  metrics.txt
results/sliding_window_localizer_hog_features-correlogram_features-haralick_features_logreg_classifier-knn_classifier-xgboost_classifier_detections/: metrics.json  metrics.txt
src/: classifiers.py  features.py  helpers.py  infer_test_images.py  infer_test_images_yolo.py  infer_webcam_yolo.py  localizers.py  main.py  make_comparison_panel.py  pipeline.py
(+19 files in other folders)
