[project]
name = "imageprocfinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "roboflow>=1.3.10",
    "ultralytics>=8.4.71",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pillow-avif-plugin>=1.5.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.3",
    "xgboost>=3.3.0",
]
